--- a/audio.html
+++ b/audio.html
@@ -73,11 +73,19 @@
     const recordButton = document.getElementById("recordButton");
     const countdownEl = document.getElementById("countdown");
     const playback = document.getElementById("playback");
+    const downloadBtn = document.getElementById("downloadBtn");
+    const resetBtn = document.getElementById("resetBtn");
+    const filenameInput = document.getElementById("filename");
+    const timerEl = document.getElementById("timer");
+    const visualizer = document.getElementById("visualizer");
+    const canvasCtx = visualizer.getContext("2d");
 
     let mediaRecorder;
     let chunks = [];
+    let audioCtx, analyser, source;
+    let recordingStartTime, timerInterval;
+    let isRecording = false;
 
-    // Always preload the first song
     song.src = songSelect.value;
 
     songSelect.addEventListener("change", () => {
@@ -85,20 +93,50 @@
     });
 
     async function startRecording() {
-      const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-      mediaRecorder = new MediaRecorder(stream, {
-        mimeType: 'audio/webm'
+      const stream = await navigator.mediaDevices.getUserMedia({
+        audio: {
+          echoCancellation: false,
+          noiseSuppression: false,
+          autoGainControl: false
+        }
       });
 
+      mediaRecorder = new MediaRecorder(stream);
       chunks = [];
+
       mediaRecorder.ondataavailable = e => chunks.push(e.data);
       mediaRecorder.onstop = () => {
+        clearInterval(timerInterval);
         const blob = new Blob(chunks, { type: 'audio/webm' });
         const url = URL.createObjectURL(blob);
         playback.src = url;
+
+        const date = new Date().toISOString().slice(2,10);
+        const trackName = songSelect.options[songSelect.selectedIndex].text;
+        filenameInput.value = `${trackName.replace(/\s+/g,'_')}_${date}`;
+        recordButton.src = "https://raw.githubusercontent.com/jmocs94/Schmidt-Education/c33a36b59f094ddec45d159cd38467f5cfaa081a/Record.png";
+        isRecording = false;
       };
 
-      // Wait until the song is ready to play before countdown
+      audioCtx = new AudioContext();
+      analyser = audioCtx.createAnalyser();
+      source = audioCtx.createMediaStreamSource(stream);
+      source.connect(analyser);
+      analyser.fftSize = 256;
+
+      function draw() {
+        const bufferLength = analyser.frequencyBinCount;
+        const dataArray = new Uint8Array(bufferLength);
+        analyser.getByteFrequencyData(dataArray);
+        canvasCtx.clearRect(0, 0, visualizer.width, visualizer.height);
+        canvasCtx.fillStyle = '#4caf50';
+        for (let i = 0; i < bufferLength; i++) {
+          const barHeight = dataArray[i];
+          canvasCtx.fillRect(i * 3, visualizer.height - barHeight, 2, barHeight);
+        }
+        if (isRecording) requestAnimationFrame(draw);
+      }
+
       song.oncanplaythrough = () => {
         let count = 3;
         countdownEl.textContent = count;
@@ -109,24 +147,50 @@
             countdownEl.textContent = "";
             song.play();
             mediaRecorder.start();
+            recordingStartTime = Date.now();
+            timerInterval = setInterval(() => {
+              const elapsed = Math.floor((Date.now() - recordingStartTime)/1000);
+              const minutes = Math.floor(elapsed / 60);
+              const seconds = elapsed % 60;
+              timerEl.textContent = `Recording Length: ${minutes}:${seconds.toString().padStart(2, '0')}`;
+            }, 1000);
+            isRecording = true;
+            draw();
+            recordButton.src = "https://raw.githubusercontent.com/jmocs94/Schmidt-Education/c33a36b59f094ddec45d159cd38467f5cfaa081a/Stop.png";
           } else {
             countdownEl.textContent = count;
           }
         }, 1000);
       };
 
-      // Trigger load and readiness check
-      song.load();
-
       song.onended = () => {
         if (mediaRecorder && mediaRecorder.state === "recording") {
           mediaRecorder.stop();
         }
       };
+
+      song.load();
     }
 
     recordButton.addEventListener("click", () => {
-      startRecording();
+      if (!isRecording) {
+        startRecording();
+      } else {
+        mediaRecorder.stop();
+      }
+    });
+
+    downloadBtn.addEventListener("click", () => {
+      const link = document.createElement("a");
+      link.href = playback.src;
+      link.download = filenameInput.value || "recording";
+      link.click();
+    });
+
+    resetBtn.addEventListener("click", () => {
+      if (confirm("Are you sure you want to reset? This will delete your recording.")) {
+        location.reload();
+      }
     });
   </script>
 </body>
