--- a/video.html
+++ b/video.html
@@ -19,7 +19,9 @@
       margin: 1em 0;
     }
     #preview {
-      width: 300px;
+      width: 480px;
+      aspect-ratio: 16 / 9;
+      object-fit: cover;
     }
     #yt-container iframe {
       width: 90%;
@@ -121,7 +123,11 @@
 
     async function setupCamera() {
       stream = await navigator.mediaDevices.getUserMedia({
-        video: true,
+        video: {
+          width: { ideal: 1920 },
+          height: { ideal: 1080 },
+          aspectRatio: 16 / 9
+        },
         audio: {
           echoCancellation: false,
           noiseSuppression: false,
