--- a/video.html
+++ b/video.html
@@ -46,6 +46,15 @@
       font-size: 2em;
       color: red;
     }
+    #rotate-warning {
+      display: none;
+      background: #ffc107;
+      color: #000;
+      padding: 1em;
+      margin: 1em auto;
+      border-radius: 10px;
+      max-width: 500px;
+    }
   </style>
 </head>
 <body>
@@ -53,6 +62,10 @@
   <h1>Crescendos 25-26 - Video Recorder</h1>
   <p>Please use headphones! This helps keep your backing track audio out of the recording and gives your video a clean sound.</p>
   <nav><a href="index.html">⬅ Back to Recording Hub</a></nav>
+
+  <div id="rotate-warning">
+    🔄 Please rotate your device to landscape mode before recording.
+  </div>
 
   <label for="videoSelect">Choose a video:</label>
   <select id="videoSelect">
@@ -94,6 +107,7 @@
     const downloadBtn = document.getElementById("downloadVideo");
     const videoSelect = document.getElementById("videoSelect");
     const ytplayer = document.getElementById("ytplayer");
+    const rotateWarning = document.getElementById("rotate-warning");
 
     let mediaRecorder;
     let recordedChunks = [];
@@ -113,6 +127,20 @@
       videoFilename.value = `${selectedText.replace(/\s+/g, '_')}_${getFormattedDate()}`;
     }
 
+    function detectOrientation() {
+      if (window.innerWidth < 768 && window.innerHeight > window.innerWidth) {
+        rotateWarning.style.display = "block";
+        startBtn.disabled = true;
+      } else {
+        rotateWarning.style.display = "none";
+        startBtn.disabled = false;
+      }
+    }
+
+    window.addEventListener("orientationchange", detectOrientation);
+    window.addEventListener("resize", detectOrientation);
+    detectOrientation();
+
     videoSelect.addEventListener("change", () => {
       currentVideoId = videoSelect.value;
       ytplayer.src = `https://www.youtube.com/embed/${currentVideoId}?enablejsapi=1`;
@@ -122,8 +150,13 @@
     updateFilename();
 
     async function setupCamera() {
+      const isMobile = window.innerWidth < 768;
       stream = await navigator.mediaDevices.getUserMedia({
-        video: {
+        video: isMobile ? {
+          width: { ideal: 720 },
+          height: { ideal: 1280 },
+          aspectRatio: 9 / 16
+        } : {
           width: { ideal: 1920 },
           height: { ideal: 1080 },
           aspectRatio: 16 / 9
@@ -177,7 +210,6 @@
             startBtn.disabled = true;
             stopBtn.disabled = false;
 
-            // Ask for fullscreen
             if (window.innerWidth > 768 && document.fullscreenEnabled) {
               ytplayer.requestFullscreen?.();
             }
