--- a/video.html
+++ b/video.html
@@ -6,7 +6,7 @@
   <title>Video Recorder - Crescendos 25-26</title>
   <style>
     body {
-      font-family: 'Comic Sans MS', cursive;
+      font-family: Helvetica, Arial, sans-serif;
       background: #e3f2fd;
       color: #333;
       text-align: center;
