--- a/audio.html
+++ b/audio.html
@@ -6,7 +6,7 @@
   <title>Audio Recorder - Crescendos 25-26</title>
   <style>
     body {
-      font-family: 'Comic Sans MS', cursive;
+      font-family: Helvetica, Arial, sans-serif;
       background: #f0f8ff;
       color: #333;
       text-align: center;
