--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Crescendos Recording Hub</title>
   <style>
     body {
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: Helvetica, Arial, sans-serif;
       background: linear-gradient(to bottom right, #fff3e0, #e0f7fa);
       text-align: center;
       padding: 3em;
