--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <div class="nav-buttons">
     <a href="audio.html" class="button">🎤 Audio Recorder</a>
     <a href="video.html" class="button">📹 Video Recorder</a>
+    <a href="rehearsal-recorder.html">🖥️ Rehearsal Recorder (Screen + Camera)</a>
   </div>
 </body>
 </html>
