--- a/rehearsal-recorder.html
+++ b/rehearsal-recorder.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rehearsal Recorder</title>
   <style>
     body {
@@ -13,9 +13,9 @@
       color: #333;
     }
     video {
-      width: 80%;
-      max-width: 960px;
-      margin-top: 1em;
+      width: 90%;
+      max-width: 1920px;
+      aspect-ratio: 16 / 9;
       transform: scaleX(-1); /* mirror horizontally */
       border-radius: 10px;
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
@@ -41,23 +41,29 @@
   </style>
 </head>
 <body>
-  <h1>Rehearsal Recorder</h1>
-  <p>Use this tool to record yourself with your screen's audio and your microphone. Make sure to wear headphones for the best sound quality!</p>
+  <h1>🎬 Rehearsal Recorder</h1>
+  <p>
+    This tool captures your webcam (mirrored), microphone, and system audio.<br />
+    When you're ready, go fullscreen and press record!
+  </p>
+
   <div id="countdown"></div>
-  <video id="recordingPreview" autoplay muted playsinline></video>
-  <br/>
+  <video id="webcamPreview" autoplay muted playsinline></video>
+  <br />
+  <button id="fullscreenBtn">Go Fullscreen</button>
   <button id="startRecording">Start Recording</button>
   <button id="stopRecording" disabled>Stop Recording</button>
-  <br/>
+  <br />
   <video id="playback" controls></video>
-  <br/>
+  <br />
   <label for="filename">Filename:</label>
   <input type="text" id="filename" />
   <button id="downloadBtn">Download</button>
 
   <script>
-    const preview = document.getElementById('recordingPreview');
+    const webcamVideo = document.getElementById('webcamPreview');
     const playback = document.getElementById('playback');
+    const fullscreenBtn = document.getElementById('fullscreenBtn');
     const startBtn = document.getElementById('startRecording');
     const stopBtn = document.getElementById('stopRecording');
     const countdown = document.getElementById('countdown');
@@ -66,12 +72,31 @@
 
     let mediaRecorder;
     let recordedChunks = [];
-    let combinedStream;
 
     function getFormattedDate() {
       const d = new Date();
-      return `${String(d.getFullYear()).slice(2)}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
+      return `${String(d.getFullYear()).slice(2)}-${String(d.getMonth() + 1).padStart(2, '0')}-${String(d.getDate()).padStart(2, '0')}`;
     }
+
+    async function setupWebcam() {
+      const webcamStream = await navigator.mediaDevices.getUserMedia({
+        video: {
+          width: { ideal: 3840 },
+          height: { ideal: 2160 },
+          aspectRatio: 16 / 9
+        },
+        audio: false
+      });
+      webcamVideo.srcObject = webcamStream;
+    }
+
+    fullscreenBtn.onclick = () => {
+      if (webcamVideo.requestFullscreen) {
+        webcamVideo.requestFullscreen();
+      } else if (webcamVideo.webkitRequestFullscreen) {
+        webcamVideo.webkitRequestFullscreen();
+      }
+    };
 
     startBtn.onclick = async () => {
       countdown.textContent = "3";
@@ -81,73 +106,67 @@
         countdown.textContent = count > 0 ? count : "";
         if (count <= 0) {
           clearInterval(interval);
-          startRecording();
+          startScreenRecording();
         }
       }, 1000);
     };
 
-    async function startRecording() {
-      try {
-        const displayStream = await navigator.mediaDevices.getDisplayMedia({
-          video: true,
-          audio: true
-        });
+    async function startScreenRecording() {
+      const screenStream = await navigator.mediaDevices.getDisplayMedia({
+        video: true,
+        audio: true // Capture system audio if available
+      });
 
-        const micStream = await navigator.mediaDevices.getUserMedia({
-          audio: {
-            echoCancellation: false,
-            noiseSuppression: false,
-            autoGainControl: false
-          },
-          video: true
-        });
+      const micStream = await navigator.mediaDevices.getUserMedia({
+        audio: {
+          echoCancellation: false,
+          noiseSuppression: false,
+          autoGainControl: false
+        }
+      });
 
-        const mixedTracks = [
-          ...displayStream.getVideoTracks(),
-          ...micStream.getAudioTracks(),
-          ...displayStream.getAudioTracks()
-        ];
+      const combinedAudio = new MediaStream([
+        ...screenStream.getAudioTracks(),
+        ...micStream.getAudioTracks()
+      ]);
 
-        combinedStream = new MediaStream(mixedTracks);
+      const combinedStream = new MediaStream([
+        ...screenStream.getVideoTracks(),
+        ...combinedAudio.getTracks()
+      ]);
 
-        preview.srcObject = combinedStream;
+      mediaRecorder = new MediaRecorder(combinedStream);
 
-        recordedChunks = [];
-        mediaRecorder = new MediaRecorder(combinedStream);
+      recordedChunks = [];
+      mediaRecorder.ondataavailable = (e) => {
+        if (e.data.size > 0) recordedChunks.push(e.data);
+      };
 
-        mediaRecorder.ondataavailable = e => {
-          if (e.data.size > 0) recordedChunks.push(e.data);
+      mediaRecorder.onstop = () => {
+        const blob = new Blob(recordedChunks, { type: 'video/webm' });
+        const url = URL.createObjectURL(blob);
+        playback.src = url;
+        downloadBtn.onclick = () => {
+          const a = document.createElement('a');
+          a.href = url;
+          const name = filenameInput.value.trim() || `Rehearsal_${getFormattedDate()}`;
+          a.download = name + ".webm";
+          a.click();
         };
+      };
 
-        mediaRecorder.onstop = () => {
-          const blob = new Blob(recordedChunks, { type: 'video/webm' });
-          const url = URL.createObjectURL(blob);
-          playback.src = url;
-
-          downloadBtn.onclick = () => {
-            const a = document.createElement('a');
-            a.href = url;
-            const name = filenameInput.value.trim() || `rehearsal_${getFormattedDate()}`;
-            a.download = name + '.webm';
-            a.click();
-          };
-        };
-
-        mediaRecorder.start();
-        startBtn.disabled = true;
-        stopBtn.disabled = false;
-      } catch (err) {
-        alert('Error accessing screen or mic: ' + err.message);
-        console.error(err);
-      }
+      mediaRecorder.start();
+      startBtn.disabled = true;
+      stopBtn.disabled = false;
     }
 
     stopBtn.onclick = () => {
       mediaRecorder.stop();
-      combinedStream.getTracks().forEach(t => t.stop());
       startBtn.disabled = false;
       stopBtn.disabled = true;
     };
+
+    setupWebcam();
   </script>
 </body>
 </html>
